readme updated to ensure env is compatible w/ jdk22

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=carbon-cell-assignment
-springdoc.swagger-ui.path=/docs.html
-logging.level.root=DEBUG
+springdoc.swagger-ui.path=/docs.htmlg
